s/v8::convert/cvv8/g! Srsly.

--- a/convert/addons/Makefile
+++ b/convert/addons/Makefile
@@ -2,7 +2,7 @@
 default: all
 
 
-SUBDIRS := bytearray jspdo shell-skel socket sprintf time
+SUBDIRS := bytearray jspdo shell-skel socket sprintf time glob
 
 .PHONY: $(SUBDIRS)
 $(SUBDIRS):
