--- a/convert/addons/socket/Makefile
+++ b/convert/addons/socket/Makefile
@@ -46,5 +46,5 @@ all: $(libv8socket.DLL)
 SHELL.NAME := shell-socket
 SHELL_LDFLAGS := -L. -lv8socket
 SHELL_BINDINGS_HEADER := socket.hpp
-SHELL_BINDINGS_FUNC := v8::convert::JSSocket::SetupBindings
+SHELL_BINDINGS_FUNC := cvv8::JSSocket::SetupBindings
 include ../shell-common.make
