--- a/convert/addons/sprintf/Makefile
+++ b/convert/addons/sprintf/Makefile
@@ -37,5 +37,5 @@ all: $(libv8sprintf.DLL)
 # shell app...
 SHELL_LDFLAGS += -L. -lv8sprintf
 SHELL_BINDINGS_HEADER := jssprintf.hpp
-SHELL_BINDINGS_FUNC := v8::convert::SetupJSPrintf
+SHELL_BINDINGS_FUNC := cvv8::SetupJSPrintf
 include ../shell-common.make
