--- a/convert/Makefile
+++ b/convert/Makefile
@@ -40,8 +40,8 @@ $(invo_gen_h): $(TMPL_GENERATOR) $(MAKEFILE_DEPS_LIST)
 	echo "#if !defined(DOXYGEN)" >> $@; \
 	i=1; while [ $$i -le $(TMPL_GENERATOR_COUNT) ]; do \
 		bash $(TMPL_GENERATOR) $$i \
-			ArgsToFunctionForwarder \
-			ArgsToMethodForwarder \
+			FunctionForwarder \
+			MethodForwarder \
 		  || exit $$?; \
 		i=$$((i + 1)); \
 	done >> $@
