--- a/include/cvv8/Makefile
+++ b/include/cvv8/Makefile
@@ -1,3 +1,8 @@
+all:
+
+EXAMPLE_DIR := ../../examples
+ifneq (,$(wildcard $(EXAMPLE_DIR)/Makefile))
 $(sort all $(MAKECMDGOALS)):
-	$(MAKE) -C ../.. $@
+	$(MAKE) -C ../../examples $@
+endif
 
