Fixed a MemDev size bug. Added InStream::gzipTo/gunzipTo().

--- a/convert/addons/whio/Makefile
+++ b/convert/addons/whio/Makefile
@@ -15,11 +15,14 @@ cvv8-whio.cpp: bytearray.hpp
 CLEAN_FILES += bytearray.cpp bytearray.hpp
 bytearray.o socket.o: bytearray.cpp
 
-whio_amalgamation.c: CFLAGS+=-std=c89
-whio_amalgamation.c: CPPFLAGS+=-DWHIO_CONFIG_ENABLE_ZLIB=1
-#whio_amalgamation.c: CPPFLAGS+=-DWHIO_CONFIG_USE_FCNTL=1
+ENABLE_ZLIB ?= 1
+whio_amalgamation.o: CFLAGS+=-std=c89
+whio_amalgamation.o: CPPFLAGS+=-DWHIO_CONFIG_ENABLE_ZLIB=$(ENABLE_ZLIB)
+#whio_amalgamation.o: CPPFLAGS+=-DWHIO_CONFIG_USE_FCNTL=1
 libwhio_v8.LIB.OBJECTS := whio_amalgamation.o whio_amalgamation_cpp.o cvv8-whio.o bytearray.o
-libwhio_v8.DLL.LDFLAGS += -lz
+ifeq (1,$(ENABLE_ZLIB))
+  libwhio_v8.DLL.LDFLAGS += -lz
+endif
 libwhio_v8.DLL.OBJECTS := $(libwhio_v8.LIB.OBJECTS)
 libwhio_v8.DLL: $(libwhio_v8.LIB.OBJECTS)
 $(eval $(call ShakeNMake.CALL.RULES.LIBS,libwhio_v8))
