removed IdleNotification() binding again because its signature keeps changing. Added a compile flag workaround for the ultra-pedantic gcc 4.6.

--- a/convert/examples/Makefile
+++ b/convert/examples/Makefile
@@ -15,6 +15,9 @@ SHELL.OBJECTS := ConvertDemo.o
 SHELL_BINDINGS_HEADER := ConvertDemo.hpp
 SHELL_BINDINGS_FUNC := BoundNative::SetupBindings
 
+# gcc 4.6 got REAL pedantic and breaks lots of code...
+CPPFLAGS += -Wno-error=unused-but-set-variable
+
 ########################################################################
 # shell app...
 include ../addons/shell-common.make
