Fixed a really dumb order-of-operations bug when generating jspdo-init.cpp. Not sure how it worked at all after that last change :/.

--- a/convert/addons/jspdo/Makefile
+++ b/convert/addons/jspdo/Makefile
@@ -138,7 +138,7 @@ jsmin: jsmin.c Makefile
 	$(CC) -o $@ jsmin.c
 CLEAN_FILES += js2c jsmin
 $(EXT.CPP): js2c jsmin $(EXT.JS) $(ALL_MAKEFILES)
-	./js2c jspdoInitCode < $(EXT.JS) | ./jsmin > $@
+	./jsmin < $(EXT.JS) | ./js2c jspdoInitCode > $@
 
 ########################################################################
 # Binaries...
